Actualiza servicios de autenticación y análisis emocional